--- a/RestApiProject/package.json
+++ b/RestApiProject/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "gulp-imagemin": "^7.1.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4"
   },
   "devDependencies": {
