--- a/RestApiProject/package.json
+++ b/RestApiProject/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.2",
     "gulp-imagemin": "^7.1.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
